--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="action_about">About</string>
     <string name="default_clock">00:00</string>
     <string name="deadline_header">Before: </string>
-    <string name="charging_time_header">Hours Needed: </string>
+    <string name="charging_time_header">Hours: </string>
     <string name="default_charging_time">1</string>
     <string name="start_time_header">Starts at: </string>
     <string name="stop_time_header">Stops at: </string>
